Major optimization update

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,300 +1,4 @@
-* {
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Roboto', sans-serif;
-}
 
-body {
-    width: 100%;
-    min-height: 100%;
-    font-family: 'Roboto', sans-serif;
-}
-
-/* ############################ HEADER ############################*/
-
-header {
-    place-items: center;
-    color: #42402E;
-    font-size: 170%;
-    margin-top: 1rem;
-}
-
-div.head {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 2.5rem;
-}
-
-
-header img#logo {
-    width: 25%;
-    height: 20%;
-}
-
-
-/* +++++++++++++++++MEDIA QUERIE+++++++++ */
-
-    @media screen and (max-width: 768px) {
-
-        header img#logo {
-            width: 80%;
-            height: 50%;
-        }
-
-        
-        
-    }
-
-/* -----------------------------------NAVIGATION BAR -----------------------------------------*/
-
-
-div.nav {
-    display: flex; 
-    position: sticky;
-    top: 0;
-    justify-content: end;
-    background-color: #42402E;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    padding: 0% 5% 0 5%;
-    z-index: 300;
-}
-
-ul.navigationBar {
-    display: flex;
-    text-align: center;
-    justify-content: space-evenly;
-    justify-content: end;
-}
-
-ul.navigationBar >li {
-    
-    margin-top: 2%;
-    padding: 0rem 2rem;
-    list-style: none;
-}
-
-
-ul.navigationBar >li:hover {
-   text-shadow: 1px 1px 2px black;
-}
-
-nav.navigationBox {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-}
-
-/* Links */
-
-a.navLink {
-    display: inline-block;
-    text-decoration: none;
-    color: white;
-    font-size: 1.2rem;
-    transition: 1s;
-    box-sizing: border-box; 
-    position: relative;
-}
-
-a.navLink:hover{
-    margin: 0s;
-    color: #5EBCAF;
-    font-size: 125%;  
-}
-
-a.zParameter {
-    z-index: 300;
-}
-
-/* +++++++++++++MEDIA QUERIE ++++++++++++*/
-
-@media screen and (max-width: 768px) {
-
-    nav.navigationBox {
-        white-space: nowrap;
-    }
-
-    div.nav {
-        display: inline-block;
-        padding: 0;
-        width: 100%;
-    }
-
-    ul.navigationBar {
-        justify-content: center;
-    }
-
-    ul.navigationBar >li {
-        display: flex;
-        justify-content: center;
-        align-content: center;
-        padding: 5% 2%;
-    }
-
-    a.navLink {
-        font-size: 95%;
-        padding: 0 10%;
-    
-    }
-
-}
-
-
-/* ### HEADER END ### */
-
-/* ############################### BODY ####################################### */
-
-main {
-    background-color: #2E2C20;
-}
-
-/* ---------------------------------HOME------------------------------------------- */
-
-
-
-div.mainHome {
-    background-image: url("../assets/img/background\ Holi.jpg");
-    background-size: cover;
-    padding: 15% 0%;
-}
-
-section.phrase {
-    animation: back-inLeft 1s 1;
-    position: relative;
-}
-
-
-@keyframes back-inLeft {
-    0% {
-        left: -100%;
-    }
-    
-    100% {
-        left: 0;
-    }
-    
-}
-
-/*++++++++++++++++++++ MEDIA QUERIE++++++++++++++++ */
-
-@media screen and (max-width: 768px) {
-
-    li.bigPhrase {
-        padding: 15% 8%;
-    }
-
-} 
-
-@media screen and (max-width: 600px) {
-
-    li.bigPhrase {
-        font-size: 100%;
-    }    
-}
-
-/* +++++++++++++++++++++++++++ */
-
-.home {
-    font-size: 400%;
-    text-align: right;
-    color: white;
-    
-}
-
-.keyWord {
-    color: #5EBCAF;
-}
-
-div.ourMission {
-    background-color: #2E2C20;
-}  
-
-.mainStage1 {
-     display: grid;
-     grid-template-columns: repeat(3, 1fr);
-     grid-template-rows: 50% 250%;
-     grid-template-areas:
-        "banner banner banner" 
-        "text1 text2 text3"
-        ;
-    text-align: center;
-    padding: 0% 5% 15% 5%;
-    row-gap: 30%;
-    column-gap: 5%;
-    padding-top: 8%;
-    margin-bottom: 8%;
-    }
-    
-h2.bannerMission {
-    display: flex;
-    color: white;
-    grid-area: banner;
-    align-items: center;
-    justify-content: center;
-    }
-    
-p.interactiveText1 {
-    background: linear-gradient(180deg, #5EBCAF 0%, #42402E 100%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: x-large;
-    color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
-    grid-area: text1;
-    }
-p.interactiveText2 {
-    background: linear-gradient(180deg, #5EBCAF 0%, #42402E 100%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-size: x-large;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    grid-area: text2;
-    }
-p.interactiveText3 {
-    background: linear-gradient(180deg, #5EBCAF 0%, #42402E 100%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: x-large;
-    color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
-    grid-area: text3;
-    }  
-
-.arrowUp {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    padding-top: 20%;
-    padding-bottom: 5%;
-    margin: 20% 47% 0% 47%;
-    font-size: 350%;
-    color: #5EBCAF;
-    }
-    
-.arrowUp:hover {
-    color: white;
-    }
-
-@media screen and (min-width:768px) {
-    .arrowUp {
-        margin-top: 0;
-        padding-top: 10%;
-    }  
-
-    .mainStage1 {
-        grid-template-rows: 50% 500%;
-       }
-}
-    
-/* HOME END */
 
 
 /* -------------------------------------STORE----------------------------------------- */
@@ -741,52 +445,8 @@ button:hover {
  /* BODY END */  
 
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx FOOTER xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+/* 
 
-footer {
-    background-color: #42402E;
-    width: 100%;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-    padding-bottom: 1%;
-}
-
-ul.footerNav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    list-style: none;
-}
-
-ul.footerNav >li {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-
-a.footerLink {
-    text-decoration: none;
-    color: white;
-    font-size: large;
-    display: inline-block;
-    width: 100%;
-    transition: 0.7s;
-}
-
-a.footerLink:hover{
-    color: #5EBCAF;
-}
-
-p#reference {
-    display: flex;
-    justify-content: center;
-}
-
-
-ul.footerMedia {
-    display: flex;
-    list-style: none;
-    justify-content: space-evenly;
-    margin-top: 1%;
-    margin-bottom: 1%;
-}
 /* ------------------------------Social Icons------------------ */
 
 a.icons {
@@ -821,7 +481,7 @@ a#wppIcon {
 
 
 /* ++++++++++++++MEDIA QUERIE++++++++++++++ */
-
+/* 
 @media  screen and (max-width: 480px) {
     ul.footerMedia {
         position: inherit;
@@ -837,6 +497,6 @@ a#wppIcon {
         margin: 0 1rem;
     }
     
-}
+} */
 
 /* FOOTER END */
