--- a/sass/styleSass.scss
+++ b/sass/styleSass.scss
@@ -1,7 +1,4 @@
-* {
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Roboto', sans-serif;
-}
-
-/* HEADER */
+@import 'variables';
+@import 'header';
+@import 'index';
+@import 'footer';
