--- a/stylesheets/newStyleSass.css
+++ b/stylesheets/newStyleSass.css
@@ -1,6 +1,207 @@
+/* Colors */
+/* Box Shadow */
 * {
   margin: 0px;
   padding: 0px;
   font-family: 'Roboto', sans-serif; }
 
-/* HEADER */
+body {
+  width: 100%;
+  min-height: 100%;
+  font-family: 'Roboto', sans-serif; }
+
+/* Start */
+header {
+  place-items: center;
+  color: #42402E;
+  font-size: 170%;
+  margin-top: 1rem; }
+  header .head {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2.5rem;
+    /* Media querie */ }
+    header .head #logo {
+      width: 25%;
+      height: 20%; }
+    @media screen and (max-width: 768px) {
+      header .head #logo {
+        width: 80%;
+        height: 50%; } }
+
+/* Navbar colors */
+.cianBackCo {
+  background: #5EBCAF; }
+
+.navBackCo {
+  background-color: #42402E; }
+
+.mainBackCo {
+  background-color: #2E2C20; }
+
+@media screen and (max-width: 768px) {
+  .ulTransparent {
+    background: transparent !important; } }
+
+.fontCoWi {
+  color: white !important;
+  text-decoration: none; }
+
+/* Home */
+main {
+  background-color: #2E2C20; }
+
+div.mainHome {
+  background-image: url("../assets/img/background Holi.jpg");
+  background-size: cover;
+  padding: 15% 0%;
+  /* Slide in */ }
+  div.mainHome .phrase {
+    animation: back-inLeft 1s 1;
+    position: relative; }
+
+@keyframes back-inLeft {
+  0% {
+    left: -100%; }
+  100% {
+    left: 0; } }
+    div.mainHome .phrase .keyWord {
+      color: #5EBCAF; }
+
+/* Media querie text responsive */
+@media screen and (max-width: 768px) {
+  div.mainHome {
+    padding: 0; }
+    div.mainHome li.bigPhrase {
+      padding: 15% 8%; } }
+
+@media screen and (max-width: 600px) {
+  li.bigPhrase {
+    font-size: 100%; } }
+
+/* Our mission */
+section.mainStage1 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 50% 300%;
+  grid-template-areas: "banner banner banner"  "text1 text2 text3";
+  text-align: center;
+  padding: 0% 5% 15% 5%;
+  row-gap: 30%;
+  column-gap: 5%;
+  padding-top: 8%; }
+  section.mainStage1 h2.bannerMission {
+    display: flex;
+    color: white;
+    grid-area: banner;
+    align-items: center;
+    justify-content: center; }
+  section.mainStage1 p.interactiveText1 {
+    background: linear-gradient(180deg, #5EBCAF 0%, #42402E 100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: x-large;
+    color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    grid-area: text1; }
+  section.mainStage1 p.interactiveText2 {
+    background: linear-gradient(180deg, #5EBCAF 0%, #42402E 100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: x-large;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    grid-area: text2; }
+  section.mainStage1 p.interactiveText3 {
+    background: linear-gradient(180deg, #5EBCAF 0%, #42402E 100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: x-large;
+    color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    grid-area: text3; }
+
+/* Arrow */
+.arrowUp {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  padding-bottom: 5%;
+  font-size: 350%;
+  color: #5EBCAF;
+  transition: 1s; }
+
+.arrowUp:hover {
+  color: white; }
+
+@media screen and (min-width: 768px) {
+  .arrowUp {
+    margin-top: 0; }
+  .mainStage1 {
+    grid-template-rows: 50% 500%; } }
+
+@media screen and (max-width: 767px) {
+  .arrowUp {
+    padding-top: 40%; } }
+
+footer {
+  background-color: #42402E;
+  width: 100%;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+  padding-bottom: 1%; }
+  footer ul.footerNav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    list-style: none;
+    padding: 0; }
+    footer ul.footerNav li {
+      margin-top: 1rem;
+      margin-bottom: 1rem; }
+      footer ul.footerNav li a.footerLink {
+        text-decoration: none;
+        color: white;
+        font-size: 100%;
+        width: 100%;
+        transition: 1s; }
+      footer ul.footerNav li a.footerLink:hover {
+        color: #5EBCAF; }
+  footer ul.footerMedia {
+    display: flex;
+    list-style: none;
+    justify-content: space-evenly;
+    margin-top: 1%;
+    margin-bottom: 2.5%;
+    padding-left: 0; }
+
+/* Social Media */
+.circleMedia {
+  background: #2E2C20;
+  padding: 1rem;
+  transition: 1s;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); }
+  .circleMedia a.icons {
+    font-size: 150%;
+    display: flex;
+    justify-content: space-around; }
+  .circleMedia a#facebookIcon {
+    color: #4267B2; }
+  .circleMedia a#twitterIcon {
+    color: #1DA1F2; }
+  .circleMedia a#instagramIcon {
+    background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+    color: white;
+    border-radius: 20%; }
+  .circleMedia a#youtubeIcon {
+    color: #FF0000; }
+  .circleMedia a#wppIcon {
+    color: #25D366; }
+
+.circleMedia:hover {
+  background: white; }
