--- a/stylesheets/newStyleSass.css
+++ b/stylesheets/newStyleSass.css
@@ -150,6 +150,106 @@ section.mainStage1 {
   .arrowUp {
     padding-top: 40%; } }
 
+/* Colors */
+/* Box Shadow */
+/* Store */
+h2.banner {
+  display: inline-block;
+  width: 100%;
+  grid-area: banner;
+  font-size: 250%;
+  color: white; }
+
+.arrowUp1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  padding-bottom: 5%;
+  margin: 0% 47% 0% 47%;
+  font-size: 350%;
+  color: #5EBCAF; }
+
+/* Colors */
+/* Box Shadow */
+h2.videoTitle {
+  color: #2E2C20;
+  font-size: 400%;
+  font-weight: 500;
+  text-align: center;
+  padding-top: 5rem;
+  padding: 3%;
+  text-shadow: 1px 1px 2px black;
+  background: url("../assets/img/yi-liu-4UkIsgqXE8s-unsplash.jpg");
+  background-position: center;
+  background-size: cover;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); }
+
+p.videoText {
+  display: flex;
+  justify-content: center;
+  font-size: x-large;
+  color: white;
+  margin: 3rem 5rem 3rem 5rem; }
+
+a.videoLink {
+  display: flex;
+  justify-content: center;
+  margin: 5% 30% 5% 30%;
+  font-size: xx-large;
+  color: #5EBCAF;
+  transition: 1s;
+  text-decoration: none; }
+
+a.videoLink:hover {
+  color: white;
+  background-color: #5EBCAF;
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); }
+
+@media screen and (max-width: 768px) {
+  section.videoSection {
+    background-color: #2E2C20; }
+    section.videoSection h2.videoTitle {
+      font-size: 200%; }
+    section.videoSection p.videoText {
+      margin: 20% 5%;
+      text-align: center; }
+    section.videoSection a.videoLink {
+      margin: 20% 5%;
+      text-align: center; } }
+
+p.channelsTitle {
+  grid-area: videosTitle;
+  color: white;
+  text-align: center;
+  font-size: 200%;
+  background-color: #42402E; }
+
+div.channelsVideos {
+  display: grid;
+  grid-template-areas: "video1 video2 video3";
+  grid-template-columns: repeat(3, 1fr);
+  padding-bottom: 5%;
+  padding-top: 5%;
+  text-align: center;
+  /* Video section */ }
+  div.channelsVideos iframe.video1 {
+    grid-area: video1;
+    width: 80%;
+    height: 100%;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); }
+  div.channelsVideos iframe.video2 {
+    grid-area: video2;
+    width: 80%;
+    height: 100%;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); }
+  div.channelsVideos iframe.video3 {
+    grid-area: video3;
+    width: 80%;
+    height: 100%;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); }
+
 footer {
   background-color: #42402E;
   width: 100%;
