Comments dividers start-end

--- a/sass/_Store.scss
+++ b/sass/_Store.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 
-/* Store */
+/* Store start*/
 
 h2.banner {
     display: inline-block;
@@ -20,3 +20,5 @@ h2.banner {
     font-size: 350%;
     color: $key_word;
 }
+
+/* Store end */
