--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,3 +1,5 @@
+/* Footer start */
+
 footer {
     background-color: $nav_back_co;
     width: 100%;
@@ -75,3 +77,5 @@ footer {
 .circleMedia:hover {
     background: $primary_color;
 }
+
+/* Footer end */
