--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -9,7 +9,7 @@
       font-family: 'Roboto', sans-serif;
   }
 
-/* Start */
+/* Header start */
 
 header {
     place-items: center;
@@ -63,3 +63,5 @@ header {
     color: $fontCoWi !important;
     text-decoration: none;
 }
+
+/* Header end */
