--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -1,4 +1,4 @@
-/* Home */
+/* Home start*/
 
 main {
     background-color: $primary_background;
@@ -131,3 +131,5 @@ section.mainStage1 {
         padding-top: 40%;
     }
 }
+
+/* Home end */
