--- a/sass/_videos.scss
+++ b/sass/_videos.scss
@@ -1,5 +1,7 @@
 @import 'variables';
 
+/* Videos start */
+
 h2.videoTitle {
     color: $primary_background;
     font-size: 400%;
@@ -100,3 +102,5 @@ div.channelsVideos {
         box-shadow: $box_shadow_prop;
     }
 }
+
+/* Videos end */
