--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -42,6 +42,15 @@ footer {
 }
 
 /* Social Media */
+
+$socialm-colors:(
+    facebook:#4267B2, 
+    twitter:#1DA1F2,
+    instagram: white, 
+    youtube: #FF0000,
+    wpp: #25D366,
+);
+
 .circleMedia {
     background: $primary_background;
     padding: 1rem;
@@ -55,21 +64,23 @@ footer {
     }
 
     a#facebookIcon {
-        color: #4267B2;
+        color: map-get($socialm-colors, facebook );
     }
     a#twitterIcon {
-        color: #1DA1F2;
+        color: map-get($socialm-colors, twitter);
     }
     a#instagramIcon { 
-        background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
-        color: white;
-        border-radius: 20%; 
+        color: map-get($socialm-colors, instagram);
+        @if color = instagram {
+            background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+            border-radius: 20%; 
+        }
     }
     a#youtubeIcon{
-        color: #FF0000;
+        color: map-get($socialm-colors, youtube);
     }
     a#wppIcon {
-        color: #25D366;
+        color: map-get($socialm-colors, wpp);
     }
 
 }
