--- a/stylesheets/newStyleSass.css
+++ b/stylesheets/newStyleSass.css
@@ -1,5 +1,6 @@
 /* Colors */
 /* Box Shadow */
+/* Center box */
 * {
   margin: 0px;
   padding: 0px;
@@ -18,9 +19,9 @@ header {
   margin-top: 1rem; }
   header .head {
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
+    flex-direction: row;
     margin-bottom: 2.5rem;
     /* Media querie */ }
     header .head #logo {
@@ -95,15 +96,15 @@ section.mainStage1 {
   padding-top: 8%; }
   section.mainStage1 h2.bannerMission {
     display: flex;
-    color: white;
-    grid-area: banner;
+    justify-content: center;
     align-items: center;
-    justify-content: center; }
+    color: white;
+    grid-area: banner; }
   section.mainStage1 p.interactiveText1 {
     background: linear-gradient(180deg, #5EBCAF 0%, #42402E 100%);
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     font-size: x-large;
     color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -111,17 +112,17 @@ section.mainStage1 {
   section.mainStage1 p.interactiveText2 {
     background: linear-gradient(180deg, #5EBCAF 0%, #42402E 100%);
     display: flex;
-    align-items: center;
     justify-content: center;
-    color: white;
+    align-items: center;
     font-size: x-large;
+    color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     grid-area: text2; }
   section.mainStage1 p.interactiveText3 {
     background: linear-gradient(180deg, #5EBCAF 0%, #42402E 100%);
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     font-size: x-large;
     color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -154,6 +155,7 @@ section.mainStage1 {
 /* Home end */
 /* Colors */
 /* Box Shadow */
+/* Center box */
 /* Store start*/
 h2.banner {
   display: inline-block;
@@ -175,6 +177,7 @@ h2.banner {
 /* Store end */
 /* Colors */
 /* Box Shadow */
+/* Center box */
 /* Videos start */
 h2.videoTitle {
   color: #2E2C20;
@@ -257,6 +260,7 @@ div.channelsVideos {
 /* Videos end */
 /* Colors */
 /* Box Shadow */
+/* Center box */
 /* Contact us start */
 #form {
   display: flex;
@@ -342,8 +346,8 @@ footer {
   .circleMedia a#twitterIcon {
     color: #1DA1F2; }
   .circleMedia a#instagramIcon {
-    background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
     color: white;
+    background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
     border-radius: 20%; }
   .circleMedia a#youtubeIcon {
     color: #FF0000; }
